<resources>
    <string name="app_name">Comic Reader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Comic Reader</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sort">Sort</string>
    <string name="action_grid">Grid</string>
    <string name="action_list">List</string>
    <string name="action_clear_all">Clear all</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_day">Day</string>
    <string name="action_night">Night</string>
    <string name="action_remove">Remove</string>
    <string name="action_info">Info</string>
    <string name="my_comic">My Comic</string>
    <string name="comic_read">Comic read</string>
    <string name="comic_title">Title</string>
    <string name="comic_date">Date</string>
    <string name="comic_size">Size</string>
    <string name="comic_format">Format</string>
    <string name="comic_cover">Comic cover</string>
    <string name="menu_options">Menu options</string>
    <string name="logo_description">Comic description</string>
    <string name="remove_file">Remove File</string>
    <string name="description_remove_file">Do you really want to remove  this file from your device?</string>
    <string name="enter_new_file_name">Enter new file name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name ="recent">Recently Read</string>
    <string name="name_folder_library">Name folder</string>
    <string name="remove_library">Remove folder</string>
    <string name="my_library">My Library</string>
    <string name="enter_new_folder_name_library">Enter new folder name</string>
    <string name="description_remove_folder_library">You want to remove the selected folder?</string>
    <string name="clear_all">Clear all</string>
    <string name="description_clear_all">This action will clear current list. Continue? </string>
    <string name="info_icon">Info icon</string>
    <string name="info">Info</string>
    <string name="name">Name</string>
    <string name="path">Path</string>
    <string name="last_modification_date">Last modification date</string>
    <string name="size">Size</string>
    <string name="info_close">Close</string>
    <string name="sort_by">Sort by</string>
    <string name="file_name">File name</string>
    <string name="file_size">File size</string>
    <string name="modified_time">Modified time</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="select_page">Select page</string>
    <string name="enter_select_page">Select page</string>
    <string name="folder_name">Folder name</string>
    <string name="folder_icon">Folder icon</string>
    <string name="pages">%1$d / %2$d</string>
    <string name="scanning_files">Scanning files…</string>

    <string name="menu_comic">Comic</string>
    <string name="menu_library">Library</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>