<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_comic"
            android:icon="@drawable/ic_menu_comic"
            android:title="@string/menu_comic" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_menu_recent"
            android:title="@string/menu_recent" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_menu_library"
            android:title="@string/menu_library" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>