<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/CustomBackgroundColorDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_sort_icon"
            style="@style/CustomImageViewStyleIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:paddingBottom="16dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/ic_menu_item_sort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sort_by_title"
            style="@style/CustomTextViewStyleDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:text="@string/sort_by"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_sort_icon" />


        <RadioGroup
            android:id="@+id/rg_sort_options_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rb_sort_by_name"
                style="@style/CustomRadioButtonDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_name" />

            <RadioButton
                android:id="@+id/rb_sort_by_size"
                style="@style/CustomRadioButtonDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_size" />

            <RadioButton
                android:id="@+id/rb_sort_by_date"
                style="@style/CustomRadioButtonDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modified_time" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/sort_buttonPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_sort_options_group">

            <Button
                android:id="@+id/btn_descending_button"
                style="@style/CustomButtonCancelDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/descending" />

            <Button
                android:id="@+id/btn_ascending_button"
                style="@style/CustomButtonOkDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/ascending" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>