<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:id="@+id/comic_background_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        style="@style/CustomBackgroundColorComicDisplay">

        <!-- Folder Cover Image -->
        <ImageButton
            android:id="@+id/ibtn_comic_read"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/comic_cover"
            android:scaleType="fitCenter"
            android:background="@null"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <!-- Folder Title -->
        <TextView
            android:id="@+id/tv_comic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ibtn_comic_read"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="62dp"
            android:layout_toEndOf="@id/ibtn_comic_read"
            android:ellipsize="end"
            android:maxLines="5"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:text="@string/comic_title"
            style="@style/CustomTextViewStyleComicDisplay"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />


        <!-- Folder Size -->
        <TextView
            android:id="@+id/tv_comic_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_comic_title"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/ibtn_comic_read"
            android:text="@string/comic_size"
            style="@style/CustomTextViewStyleComicDisplay"
            android:textSize="14sp" />

        <!-- Folder Date -->
        <TextView
            android:id="@+id/tv_comic_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_comic_size"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-45dp"
            android:layout_toEndOf="@id/ibtn_comic_read"
            android:text="@string/comic_date"
            style="@style/CustomTextViewStyleComicDisplay"
            android:textSize="14sp" />

        <!-- Folder Format -->
        <TextView
            android:id="@+id/tv_comic_format"
            style="@style/CustomTextViewStyleComicFormat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ibtn_comic_read"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/comic_format"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />

        <!-- Menu Button -->
        <ImageButton
            android:id="@+id/ibtn_comic_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_comic_title"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:contentDescription="@string/menu_options"
            android:src="@drawable/ic_menu_item_vert"
            style="@style/CustomImageButtonComicMenu"
            tools:ignore="TouchTargetSizeCheck" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>